--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "utevo Extension",
     "version": "1.0",
     "description": "Build an Extension!",
-    "permissions": ["storage"],
+    "permissions": ["storage", "declarativeContent"],
     "background": {
         "scripts": ["background.js"],
         "persistent": false
@@ -15,6 +15,12 @@
             "48": "images/get_started48.png",
             "128": "images/get_started128.png"
         }
+    },
+    "icons": {
+      "16": "images/get_started16.png",
+      "32": "images/get_started32.png",
+      "48": "images/get_started48.png",
+      "128": "images/get_started128.png"
     },
     "manifest_version": 2
 }
