--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "utevo Extension",
     "version": "1.0",
     "description": "Build an Extension!",
-    "permissions": ["storage", "declarativeContent"],
+    "permissions": ["activeTab", "storage", "declarativeContent"],
     "background": {
         "scripts": ["background.js"],
         "persistent": false
